<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ua.killer.jack.calculator.MainActivity">

    <TextView
        android:id="@+id/display"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_toLeftOf="@+id/btn_clean"
        android:layout_toStartOf="@+id/btn_clean"
        android:maxLength="9"
        android:text="@string/_0"
        android:textSize="50sp" />

    <TextView
        android:id="@+id/result_str"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <GridLayout
        android:id="@+id/num_pad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_below="@id/display"
        android:layout_centerInParent="true"
        android:columnCount="4">

        <Button
            android:onClick="onClick"
            android:text="@string/_1" />

        <Button
            android:onClick="onClick"
            android:text="@string/_2" />

        <Button
            android:onClick="onClick"
            android:text="@string/_3" />

        <Button
            android:onClick="onClick"
            android:text="@string/sub" />

        <Button
            android:onClick="onClick"
            android:text="@string/_4" />

        <Button
            android:onClick="onClick"
            android:text="@string/_5" />

        <Button
            android:onClick="onClick"
            android:text="@string/_6" />

        <Button
            android:onClick="onClick"
            android:text="@string/div" />

        <Button
            android:onClick="onClick"
            android:text="@string/_7" />

        <Button
            android:onClick="onClick"
            android:text="@string/_8" />

        <Button
            android:onClick="onClick"
            android:text="@string/_9" />

        <Button
            android:onClick="onClick"
            android:text="@string/mul" />


        <Button
            android:onClick="onClick"
            android:text="@string/_0" />

        <Button
            android:layout_columnSpan="2"
            android:layout_gravity="fill_horizontal"
            android:onClick="onClick"
            android:text="@string/equal" />

        <Button
            android:onClick="onClick"
            android:text="@string/sum" />
    </GridLayout>

    <ImageView
        android:id="@+id/btn_clean"
        android:layout_width="75dp"
        android:layout_height="match_parent"
        android:layout_above="@+id/num_pad"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:clickable="true"
        android:contentDescription="@string/clean"
        android:padding="4dp"
        android:src="@android:drawable/ic_delete" />

</RelativeLayout>
